# xsens_standalone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  xsens_config_prod.xsa
xsens_serial/: mtdef.py  mtdevice.py  mtnode.py
